Fixed problem with overflow for mobile

--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -1,5 +1,6 @@
 html {
   font-size: 62.5%;
+  overflow-x: hidden;
 
   @include respond(tab_land) {
     font-size: 56.25%;
@@ -23,4 +24,5 @@ body {
   font-family: "Inter", sans-serif;
   font-weight: 400;
   line-height: 1.2;
+  overflow-x: hidden;
 }
